--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gitサイトテスト</title>
   <style>
-    color:a
+    h1 {
+      color: green
+    }
   </style>
+
+  <h1>Gitサイトテスト</h1>
 
 
   <link rel="stylesheet" href="css/style.css">
